# RM_UI_Simulator

./: .gitignore  LICENSE  README.md  setup.py
RM_UI_Simulator/: __init__.py  __main__.py  data.py  variables
RM_UI_Simulator/C_platform/: CMakeLists.txt  __init__.py  main.c
RM_UI_Simulator/C_platform/Builder/: __init__.py  choose_files.py  choose_files.ui  exe_file_maker.py
RM_UI_Simulator/C_platform/win32/: platform.c  platform.h
RM_UI_Simulator/c_reader/: base.py
RM_UI_Simulator/c_reader/ctype/: __init__.py  c_range.py  core.py
RM_UI_Simulator/c_reader/debugger/: __init__.py
RM_UI_Simulator/c_reader/structure/: GraphData.py
RM_UI_Simulator/qtui/: __init__.py
RM_UI_Simulator/qtui/main_window/: AskServerPort.ui  __init__.py  ask_server_port.py  welcome_window.py  welcome_window.ui
RM_UI_Simulator/qtui/option_ui/: __init__.py
RM_UI_Simulator/qtui/player_ui/: __init__.py  new_variable.ui  new_variable_dialog.py  player.py  player_manager.py  player_widgets.py
RM_UI_Simulator/tools/: __init__.py  refactoring.py
demo/: test.py
demo/sample-ui-project/.pyRM_UI_Simulator/: config.yml  var.yml
demo/sample-ui-project/core/: data_tool.c  data_tool.h  main.c  main.h
demo/sample-ui-project/widgets/: circle_and_line.c  circle_and_line.h
